--- a/20161216_JS_Project_Moustafa/index.html
+++ b/20161216_JS_Project_Moustafa/index.html
@@ -20,6 +20,9 @@
             <div class="destroy burst"></div>
             <div class="destroy rocket"></div>
             <div class="destroy base"></div>
+			<div class="myshap">
+                <div class="myshapcon"></div>
+            </div>
         </div>
         <!--<div class="curve"></div>-->
     </div>
